--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>INFO2180 Project 1</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="scripts.js"></script>
 </head>
 <body>
     <header>
         <div class="container">
-            <h1>INFO2180 Project 1</h1>
+            <a href="#" class="logo">INFO2180 Project 1</a>
             <nav>
                 <ul>
                     <li><a href="#">About</a></li>
@@ -22,96 +21,95 @@
             </nav>
         </div>
     </header>
+
     <main>
-        <section class="overview-hero">
+        <section class="hero">
             <div class="container">
-                <div class="overview-hero-image">
-                    <img src="#" alt="">
+                <div class="hero-text">
+                    <h2>Live your healthiest life now!</h2>
+                    <p>At INFO2180 Labs we're committed to improving the lives of as many people as possible. One of the most important areas in which we're striving to do that is health.</p>
                 </div>
-                <div class="overview-hero-text">
-                    <h2>Live  your healthiest life now!</h2>
-                    <p>At INFO2180 Labs we’re committed to improving the lives of as many people as possible. One of the most important areas in which we’re striving to do that is health.</p>
+                <div class="hero-image">
+                    <!-- Illustration from undraw.co, as suggested in project brief -->
+                    <img src="https://storage.googleapis.com/copilot-mac-storage/undraw_meditation_re_gll0.svg" alt="Woman meditating">
                 </div>
             </div>
         </section>
+
         <section class="learn-about">
             <div class="container">
-                <h2>Learn About</h2>
+                <h3>Learn About</h3>
                 <div class="cards">
                     <div class="card">
-                        <img src="#" alt="">
-                        <div class="card-body">
-                            <h3>Artificial Intelligence</h3>
-                            <p>Learn how our innovations in machine learning are making a positive impact on healthcare.</p>
-                        </div>
+                        <img src="https://storage.googleapis.com/copilot-mac-storage/undraw_artificial_intelligence_re_enpp.svg" alt="Artificial Intelligence">
+                        <h4>Artificial Intelligence</h4>
+                        <p>Learn how our innovations in machine learning are making a positive impact on healthcare.</p>
                     </div>
                     <div class="card">
-                        <img src="#" alt="">
-                        <div class="card-body">
-                            <h3>Fitness+ Tracker</h3>
-                            <p>Fitness+ is our new, engaging and personalized fitness tracking app experience designed to help you stay in shape and feel great.</p>
-                        </div>
+                        <img src="https://storage.googleapis.com/copilot-mac-storage/undraw_fitness_tracker_3033.svg" alt="Fitness Tracker">
+                        <h4>Fitness+ Tracker</h4>
+                        <p>Fitness+ is our new, engaging and personalized fitness tracking app experience designed to help you stay in shape and feel great.</p>
                     </div>
                     <div class="card">
-                        <img src="#" alt="">
-                        <div class="card-body">
-                            <h3>Healthy Lifestyle</h3>
-                            <p>Being healthy should be part of your overall lifestyle. Living a healthy lifestyle can help prevent chronic diseases and long-term illnesses.Take control of your life with these 5 simple steps.</p>
-                        </div>
+                        <img src="https://storage.googleapis.com/copilot-mac-storage/undraw_healthy_lifestyle_re_ifwg.svg" alt="Healthy Lifestyle">
+                        <h4>Healthy Lifestyle</h4>
+                        <p>Being healthy should be part of your overall lifestyle. Living a healthy lifestyle can help prevent chronic diseases and long-term illnesses.</p>
                     </div>
                 </div>
             </div>
         </section>
-        <section class="testing">
+
+        <section class="covid-testing">
             <div class="container">
-                <div class="testing-desciption">
-                    <h2>COVID-19 Testing Programme</h2>
+                <div class="covid-text">
+                    <h3>COVID-19 Testing Programme</h3>
                     <p>Providing secure and connected COVID-19 screening and testing services to communities in collaboration with public health agencies and industry partners.</p>
                 </div>
-                <div class="cta">
-                    <a href="#" class="btn">Learn More</a>
-                </div>
+                <a href="#" class="btn">Learn More</a>
             </div>
         </section>
-        <section class="stories">
+
+        <section class="recent-stories">
             <div class="container">
-                <h2>Recent Stories</h2>
+                <h3>Recent Stories</h3>
                 <article>
-                    <img src="" alt="">
-                    <div class="article-body">
-                        <h3>Dr. Christopher Turk has spent his entire career caring for people’s health and wellbeing.</h3>
+                    <img src="https://images.unsplash.com/photo-1557862921-37829c790f19?ixlib=rb-1.2.1&auto=format&fit=crop&w=1051&q=80" alt="Dr. Christopher Turk">
+                    <div class="story-content">
+                        <h4>Dr. Christopher Turk has spent his entire career caring for people's health and wellbeing.</h4>
                         <p>After years in the healthcare system, Dr. Christopher Turk is bringing together groups of people across the world to take on big healthcare challenges through groundbreaking research and developing tools that support better care.</p>
-                        <p><a href="#">Read this Story</a></p>
+                        <a href="#">Read His Story</a>
                     </div>
                 </article>
                 <article>
-                    <img src="" alt="">
-                    <div class="article-body">
-                        <h3>INFO2180 Labs collaborates with the Ministry of Health and Ministry of Education on COVID-19 Risk Screening and Testing</h3>
-                        <p>INFO2180 Labs, in collaboration with the Ministry of Health and Wellness and Ministry of Education, will launch a pilot project intended to expand access to COVID-19 risk screening and testing for high risk individuals in the parishes of Kingston and St. Andrew.</p>
-                        <p><a href="#">Read this Story</a></p>
+                    <img src="https://images.unsplash.com/photo-1576091160550-2173dba999ef?ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80" alt="Medical professional with a tablet">
+                     <div class="story-content">
+                        <h4>INFO2180 Labs collaborates with the Ministry of Health and Ministry of Education on COVID-19 Risk Screening and Testing</h4>
+                        <p>INFO2180 Labs, in collaboration with the Ministry of Health and Wellness and Ministry of Education, will launch a pilot project intended to expand access to COVID-19 risk screening and testing for high-risk individuals in the parishes of Kingston and St. Andrew.</p>
+                        <a href="#">Read this Story</a>
                     </div>
                 </article>
             </div>
         </section>
+
         <section class="newsletter">
             <div class="container">
                 <h3>Sign up for our newsletter</h3>
-                <p>Learn more about the latest developments from INFO2180 Labs’ health-related research and initiatives.</p>
-                <form action="#" method="post">
-                    <div class="form-group">
-                        <input type="email" name="email" id="email" placeholder="Enter your email">
-                    </div>
+                <p>Learn more about the latest developments from INFO2180 Labs' health-related research and initiatives.</p>
+                <form>
+                    <input type="email" placeholder="Email address">
                     <button type="submit" class="btn">Subscribe</button>
                 </form>
-                <div class="message"></div>
+                 <div class="message"></div>
             </div>
         </section>
     </main>
+
     <footer>
         <div class="container">
-            <p>Copyright 2020, Your Name</p>
+            <p>Copyright 2020, Ravaughn Marsh</p>
         </div>
     </footer>
+
+    <script src="scripts.js"></script>
 </body>
 </html>
