Add id attribute to email input for newsletter form

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <img src="https://images.unsplash.com/photo-1557862921-37829c790f19?ixlib=rb-1.2.1&auto=format&fit=crop&w=1051&q=80" alt="Dr. Christopher Turk">
                     <div class="story-content">
                         <h4>Dr. Christopher Turk has spent his entire career caring for people's health and wellbeing.</h4>
-                        <p>After years in the healthcare system, Dr. Christopher Turk is bringing together groups of people across the world to take on big healthcare challenges through groundbreaking research and developing tools that support better care.</p>
+                        <p>After years in the healthcare system, Dr. Christopher Turk is bringing together groups of people across the world to take on big healthcare challenges through groundbreaking research and developing tools that advance the equality of care.</p>
                         <a href="#">Read His Story</a>
                     </div>
                 </article>
@@ -84,7 +84,7 @@
                     <img src="https://images.unsplash.com/photo-1576091160550-2173dba999ef?ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80" alt="Medical professional with a tablet">
                      <div class="story-content">
                         <h4>INFO2180 Labs collaborates with the Ministry of Health and Ministry of Education on COVID-19 Risk Screening and Testing</h4>
-                        <p>INFO2180 Labs, in collaboration with the Ministry of Health and Wellness and Ministry of Education, will launch a pilot project intended to expand access to COVID-19 risk screening and testing for high-risk individuals in the parishes of Kingston and St. Andrew.</p>
+                        <p>INFO2180 Labs, in collaboration with the Ministry of Health and Wellness and Ministry of Education, will launch a pilot project intended to expand access to COVID-19 risk screening and testing to high risk individuals in the parishes of Kingston and St. Andrew.</p>
                         <a href="#">Read this Story</a>
                     </div>
                 </article>
@@ -96,7 +96,7 @@
                 <h3>Sign up for our newsletter</h3>
                 <p>Learn more about the latest developments from INFO2180 Labs' health-related research and initiatives.</p>
                 <form>
-                    <input type="email" placeholder="Email address">
+                    <input type="email" id="email" placeholder="Email address">
                     <button type="submit" class="btn">Subscribe</button>
                 </form>
                  <div class="message"></div>
