--- a/index.html
+++ b/index.html
@@ -41,17 +41,17 @@
                 <h3>Learn About</h3>
                 <div class="cards">
                     <div class="card">
-                        <img src="https://storage.googleapis.com/copilot-mac-storage/undraw_artificial_intelligence_re_enpp.svg" alt="Artificial Intelligence">
+                        <img src="aipic.jpg" alt="Artificial intelligence concept">
                         <h4>Artificial Intelligence</h4>
                         <p>Learn how our innovations in machine learning are making a positive impact on healthcare.</p>
                     </div>
                     <div class="card">
-                        <img src="https://storage.googleapis.com/copilot-mac-storage/undraw_fitness_tracker_3033.svg" alt="Fitness Tracker">
+                        <img src="health.jpg" alt="Health and fitness tracking">
                         <h4>Fitness+ Tracker</h4>
                         <p>Fitness+ is our new, engaging and personalized fitness tracking app experience designed to help you stay in shape and feel great.</p>
                     </div>
                     <div class="card">
-                        <img src="https://storage.googleapis.com/copilot-mac-storage/undraw_healthy_lifestyle_re_ifwg.svg" alt="Healthy Lifestyle">
+                        <img src="fitness.jpg" alt="Healthy lifestyle and wellbeing">
                         <h4>Healthy Lifestyle</h4>
                         <p>Being healthy should be part of your overall lifestyle. Living a healthy lifestyle can help prevent chronic diseases and long-term illnesses.</p>
                     </div>
@@ -76,7 +76,7 @@
                     <img src="https://images.unsplash.com/photo-1557862921-37829c790f19?ixlib=rb-1.2.1&auto=format&fit=crop&w=1051&q=80" alt="Dr. Christopher Turk">
                     <div class="story-content">
                         <h4>Dr. Christopher Turk has spent his entire career caring for people's health and wellbeing.</h4>
-                        <p>After years in the healthcare system, Dr. Christopher Turk is bringing together groups of people across the world to take on big healthcare challenges through groundbreaking research and developing tools that advance the equality of care.</p>
+                        <p>After years in the healthcare system, Dr. Christopher Turk is bringing together groups of people across the world to take on big healthcare challenges through groundbreaking research and patient-centered care.</p>
                         <a href="#">Read His Story</a>
                     </div>
                 </article>
@@ -84,7 +84,7 @@
                     <img src="https://images.unsplash.com/photo-1576091160550-2173dba999ef?ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80" alt="Medical professional with a tablet">
                      <div class="story-content">
                         <h4>INFO2180 Labs collaborates with the Ministry of Health and Ministry of Education on COVID-19 Risk Screening and Testing</h4>
-                        <p>INFO2180 Labs, in collaboration with the Ministry of Health and Wellness and Ministry of Education, will launch a pilot project intended to expand access to COVID-19 risk screening and testing to high risk individuals in the parishes of Kingston and St. Andrew.</p>
+                        <p>INFO2180 Labs, in collaboration with the Ministry of Health and Wellness and Ministry of Education, will launch a pilot project intended to expand access to COVID-19 risk screening and testing, ensuring safer learning environments and healthier communities.</p>
                         <a href="#">Read this Story</a>
                     </div>
                 </article>
@@ -106,7 +106,7 @@
 
     <footer>
         <div class="container">
-            <p>Copyright 2020, Ravaughn Marsh</p>
+            <p>Coppyright 2020,1 Ravaughn Marsh</p>
         </div>
     </footer>
 
