--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
     <footer>
         <div class="container">
-            <p>Copyright 2020, Ravaughn Marsh</p>
+            <p>Coppyright 2020,1 Ravaughn Marsh</p>
         </div>
     </footer>
 
